--- a/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/lista-solicitacoes-aluno/lista-solicitacoes-aluno.component.html
@@ -19,8 +19,8 @@
   </div>
 
   <ng-template #semSolicitacoes>
-    <div class="semSolicitacoes">
-      <p>Você não tem solicitações cadastradas.</p>
+    <div class="semSolicitacoes" style="height: 500px !important;">
+      <p><b>Você não tem solicitações cadastradas.</b></p>
     </div>
   </ng-template>
 </div>
