--- a/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.html
+++ b/devII/src/app/modules/servidor/lista-servidor/lista-servidor.component.html
@@ -37,7 +37,7 @@
     *ngIf="!mostrarHistorico"
   >
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Drive</th>
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let servidor">
         <span>{{ servidor.nome }}</span>
       </td>
