--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/solicitacao/solicitacao.component.scss
@@ -6,7 +6,7 @@
   padding: 2px 20px 0px 20px;
   font-weight: 500;
   margin: 0% 10% 0% 5%;
-  background: #FFFFFF;
+  background: #F8F9FA;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
