--- a/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
+++ b/devII/src/app/modules/servidor/formulario-servidor/formulario-servidor.component.html
@@ -1,8 +1,35 @@
 <div class="titulo">
-  <p>Cadastro de servidores</p>
+  <p>Gerenciamento de usuários {{gerenciarServidores ? '' : ': Cadastro'}}</p>
 </div>
 
-<div class="listaServidores">
+<div class="container cards" *ngIf="gerenciarServidores">
+  <mat-card>
+    <mat-card-header >
+      <mat-card-subtitle>Ir para gerenciamento de:</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content (click)="servidorClick()" >
+      <div class="dataCard">
+        <svg width="99px" height="99px" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M512 480a224 224 0 1 0-224-224 224 224 0 0 0 224 224z m0-384a160 160 0 1 1-160 160 160 160 0 0 1 160-160zM989.44 947.84a32 32 0 0 0-6.72-10.56 37.12 37.12 0 0 0-10.56-6.72 32 32 0 0 0-34.88 6.72 36.8 36.8 0 0 0-6.72 10.56 26.56 26.56 0 0 0-2.56 12.16 32 32 0 0 0 2.24 12.16 39.04 39.04 0 0 0 7.04 10.56 32 32 0 0 0 34.88 6.72 37.12 37.12 0 0 0 10.56-6.72 32 32 0 0 0 6.72-34.88zM832 928h-160a32 32 0 0 0 0 64h160a32 32 0 0 0 0-64z" fill="#231815"></path><path d="M941.44 862.08a32 32 0 0 0 18.56-41.6 480 480 0 0 0-926.4 137.28 32 32 0 0 0 32 34.24H544a32 32 0 0 0 0-64H101.44a416 416 0 0 1 800-84.48 32 32 0 0 0 40 18.56z" fill="#231815"></path></g></svg>
+        <h2>Servidores</h2>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-subtitle>Ir para gerenciamento de:</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content (click)="alunoClick()">
+      <div class="dataCard" >
+        <svg width="99px" height="99px" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M512 480a224 224 0 1 0-224-224 224 224 0 0 0 224 224z m0-384a160 160 0 1 1-160 160 160 160 0 0 1 160-160zM989.44 947.84a32 32 0 0 0-6.72-10.56 37.12 37.12 0 0 0-10.56-6.72 32 32 0 0 0-34.88 6.72 36.8 36.8 0 0 0-6.72 10.56 26.56 26.56 0 0 0-2.56 12.16 32 32 0 0 0 2.24 12.16 39.04 39.04 0 0 0 7.04 10.56 32 32 0 0 0 34.88 6.72 37.12 37.12 0 0 0 10.56-6.72 32 32 0 0 0 6.72-34.88zM832 928h-160a32 32 0 0 0 0 64h160a32 32 0 0 0 0-64z" fill="#231815"></path><path d="M941.44 862.08a32 32 0 0 0 18.56-41.6 480 480 0 0 0-926.4 137.28 32 32 0 0 0 32 34.24H544a32 32 0 0 0 0-64H101.44a416 416 0 0 1 800-84.48 32 32 0 0 0 40 18.56z" fill="#231815"></path></g></svg>
+        <h2>Alunos</h2>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+
+
+<div class="listaServidores" *ngIf="!gerenciarServidores">
   <a routerLink="/listaServidores" class="listaservidor"
     ><button
       matTooltip="Lista de servidores que estão cadastrados no sistema"
@@ -29,7 +56,7 @@
     {{ desbloqueio ? "Cadastrar servidor" : "Desbloquear e-mail" }}
   </button>
 </div>
-<div class="formulario">
+<div class="formulario" *ngIf="!gerenciarServidores">
   <form
     class="formulario--centro"
     role="form"
