--- a/devII/src/app/perfil/perfil.component.html
+++ b/devII/src/app/perfil/perfil.component.html
@@ -26,7 +26,7 @@
         [disabled]="true"
       />
 
-      <label for="turno">Turno</label>
+      <label for="turno">Turno*</label>
       <select
         id="turno"
         name="turno"
@@ -50,7 +50,7 @@
             [(ngModel)]="aluno.matricula"
             placeholder="Matrícula"
             [maxlength]="10"
-            required
+            [disabled]="true"
           />
         </li>
       </ul>
