Colocando o footer para ficar grudado abaixo

--- a/devII/src/app/app.component.html
+++ b/devII/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div>
+<div class="fixaFooter">
   <app-header />
-  <div>
+  <div class="fixaFooter2">
     <router-outlet></router-outlet>
   </div>
-  <app-footer />
+
+      <app-footer />
+
+
 </div>
