--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -56,7 +56,7 @@
             mat-icon-button
             (click)="
               editarEstagio
-                ? atualizarEstagio()
+                ? atualizarSolicitacao()
                 : (editarEstagio = !editarEstagio)
             "
             *permission="Roles.ROLE_SESTAGIO"
@@ -201,7 +201,7 @@
             mat-icon-button
             (click)="
               editarEmpresa
-                ? atualizarEmpresa()
+                ? atualizarSolicitacao()
                 : (editarEmpresa = !editarEmpresa)
             "
             *permission="Roles.ROLE_SESTAGIO"
@@ -472,7 +472,7 @@
             color="warn"
             class="deferir"
             (click)="
-              studentData.editavel ? trocarEditar() : abrirDialogEdicao()
+              studentData.editavel ? trocarEditar() : abrirDialogParaEdicao()
             "
           >
             {{
