Atualização do manual do aluno, adição de mais conteúdo sobre o sistema e o processo

--- a/devII/src/app/manual-do-aluno/manual-do-aluno.component.scss
+++ b/devII/src/app/manual-do-aluno/manual-do-aluno.component.scss
@@ -5,7 +5,7 @@ section{
     width: 100%;
     display: flex;
     align-items: center;
-    padding: 0 20%;
+    padding: 0 25%;
     justify-content: center;
 
 }
@@ -17,4 +17,12 @@ p{
     text-indent: 50px;
     line-height: 1.3;
     font-family: Nunito, Geneva, Tahoma, sans-serif;
+}
+
+img{
+    border: 1px solid black;
+}
+
+.marginStatus{
+    margin-top: 5%;
 }
