--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/analise-docs/analise-docs.component.html
@@ -370,6 +370,19 @@
                     </button>
                   </td>
                 </ng-container>
+                <ng-container matColumnDef="excluir">
+                  <th mat-header-cell *matHeaderCellDef>Excluir</th>
+                  <td mat-cell *matCellDef="let doc">
+                    <button
+                    *ngIf="doc.assinado"
+                      mat-icon-button
+                      color="primary"
+                      (click)="deletar(doc)"
+                    >
+                      <mat-icon class="salvar">delete</mat-icon>
+                    </button>
+                  </td>
+                </ng-container>
                 <tr mat-header-row *matHeaderRowDef="colunas"></tr>
                 <tr mat-row *matRowDef="let row; columns: colunas"></tr>
               </table>
