--- a/devII/src/app/modules/vagas-estagio/mural-de-vagas/mural-de-vagas.component.scss
+++ b/devII/src/app/modules/vagas-estagio/mural-de-vagas/mural-de-vagas.component.scss
@@ -21,7 +21,5 @@
     flex-direction: column;
     align-items: center;
     margin-top: 3%;
-    font-size: 28px;
-    font-weight: bold;
-    color: #000000;
+    padding: 0% 30%;
   }
